<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgItem">
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/border_bottom_black">
        <TextView
            android:id="@+id/hello_text"
            android:paddingLeft="10dp"
            android:textSize="22dp"
            android:maxWidth="200dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:orientation="horizontal"
            android:background="#808080"
            android:layout_alignParentRight="true"/>
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
    <com.example.developer.taskmanagerv05.GridViewCustom
        android:id="@+id/grid_view"
        android:layout_below="@id/top_bar"
        style="@style/GridView"/>
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginRight="-80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#000">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add"/>
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
    <!-- MODALS -->
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/overlay"
        style="@style/Overlay">
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/edit_modal"
        style="@style/Modal">
        <TextView
            android:id="@+id/edit_item_id"
            style="@style/HiddenIdField"/>
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_bottom_black"
            android:textCursorDrawable="@drawable/cursor_black"
            style="@style/EditTextLoginActivity"
            android:hint="@string/placeholder"/>
        <Button
            android:id="@+id/edit_save"
            android:text="@string/save"
            android:layout_below="@id/edit_text"
            style="@style/Button"/>
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/delete_modal"
        style="@style/Modal">
        <TextView
            android:id="@+id/delete_item_id"
            style="@style/HiddenIdField"/>
        <TextView
            android:id="@+id/delete_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/EditTextLoginActivity"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/delete_save"
            android:text="@string/delete"
            android:layout_below="@id/delete_text"
            style="@style/Button"/>
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
    <com.example.developer.taskmanagerv05.RelativeLayoutCustom
        android:id="@+id/add_modal"
        style="@style/Modal">
        <EditText
            android:id="@+id/add_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_bottom_black"
            android:textCursorDrawable="@drawable/cursor_black"
            style="@style/EditTextLoginActivity"
            android:hint="@string/placeholder"/>
        <Button
            android:id="@+id/add_save"
            android:text="@string/add"
            android:layout_below="@id/add_text"
            style="@style/Button"/>
    </com.example.developer.taskmanagerv05.RelativeLayoutCustom>
</RelativeLayout>